# smalltalk-validator-mcp-server

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
doc/: tree-sitter-tonel-smalltalk-feasibility.md
docs/: lint-checks.md
smalltalk_validator_mcp_server/: __init__.py  __main__.py  core.py  linter.py  parser.py  server.py
tests/: __init__.py  test_linter.py  test_server.py
tests/fixtures/: invalid_syntax.st  tonel_structure_only.st  valid_class.st
