[project]
name = "smalltalk-validator-mcp-server"
version = "0.2.4"
description = "MCP server for validating and linting Tonel formatted Smalltalk source code"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.14.1",
    "tonel-smalltalk-parser>=0.2.2",
]

[project.scripts]
smalltalk-validator-mcp-server = "smalltalk_validator_mcp_server.server:main"

[tool.uv.sources]
tonel-smalltalk-parser = { git = "https://github.com/mumez/tonel-smalltalk-parser.git" }

[dependency-groups]
dev = [
    "mdformat>=1.0.0",
    "mdformat-gfm>=1.0.0",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.14.10",
]

[tool.uv]
package = true

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mdformat]
wrap = 88
end_of_line = "auto"
exclude = [".venv", "*.egg-info", ".pytest_cache"]
